--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "release": "release-it",
     "prepublish": "yarn build && yarn copy-flowtypes",
     "copy-flowtypes": "flow-copy-source --ignore __tests__/*.js src build",
-    "build": "rm -rf build; babel src --out-dir build --ignore 'src/__tests__/*'"
+    "build": "rm -rf build; babel src --out-dir build --ignore 'src/__tests__/*'",
+    "prepare": "yarn prepublish"
   },
   "jest": {
     "preset": "react-native",
